--- a/TP1-Trabalho1.cbp
+++ b/TP1-Trabalho1.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Trabalho1_AUX" />
+		<Option title="TP1-Trabalho1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Trabalho1_AUX" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/TP1-Trabalho1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Trabalho1_AUX" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/TP1-Trabalho1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -36,19 +36,12 @@
 		<Unit filename="dominio.cpp" />
 		<Unit filename="dominio.h" />
 		<Unit filename="entidades.h" />
+		<Unit filename="func.cpp" />
+		<Unit filename="func.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="testes.cpp" />
 		<Unit filename="testes.h" />
 		<Extensions>
-			<DoxyBlocks>
-				<comment_style block="2" line="2" />
-				<doxyfile_project project_number="1.0" output_directory="Rodrigo\1-Faculdade\GRADUAÇÃO\9º Semestre\3 TP1\7 Github\doxygen" output_language="Portuguese" />
-				<doxyfile_build />
-				<doxyfile_warnings />
-				<doxyfile_output />
-				<doxyfile_dot />
-				<general use_at_in_tags="1" />
-			</DoxyBlocks>
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
