--- a/TP1 - Trabalho 1.cbp
+++ b/TP1 - Trabalho 1.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="TP1-Trabalho1" />
+		<Option title="TP1 - Trabalho 1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/TP1-Trabalho1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/TP1 - Trabalho 1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/TP1-Trabalho1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/TP1 - Trabalho 1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -42,15 +42,6 @@
 		<Unit filename="testes.cpp" />
 		<Unit filename="testes.h" />
 		<Extensions>
-			<DoxyBlocks>
-				<comment_style block="2" line="2" />
-				<doxyfile_project project_number="1" output_directory="doxy" output_language="Brazilian" />
-				<doxyfile_build extract_all="1" extract_private="1" extract_static="1" />
-				<doxyfile_warnings warn_if_undocumented="1" />
-				<doxyfile_output />
-				<doxyfile_dot />
-				<general use_at_in_tags="1" />
-			</DoxyBlocks>
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
